Lagt til testcase for TPS-sykronisering